<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context="com.techindustan.dailywisdom.activity.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4.5"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:src="@drawable/logo_login" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_heading" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="4.5"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email" />


        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:cursorVisible="true"
            android:ems="10"
            android:hint="Enter email"
            android:inputType="textEmailAddress"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" android:textColor="@color/colorBlack"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="@dimen/text_small" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGrey"

            />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="20dp"
            android:text="@string/password" />


        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/password_icn"
            android:ems="10"
            android:hint="Enter Password"
            android:inputType="textPassword"
            android:paddingBottom="10dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"

            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="@dimen/text_small" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGrey"

            />

        <TextView
            android:id="@+id/tvForgotPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/forgotpass"
            android:textAllCaps="false"
            android:textColor="@color/colorTheme"
            android:textSize="@dimen/text_small" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorTheme"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_large" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="Dont Have Account?"
            android:textAllCaps="false"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_small" />

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:paddingBottom="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/colorTheme"
            android:textSize="@dimen/text_small" />
    </LinearLayout>

</LinearLayout>
